snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-kotlin-tooling-metadata.json.sha1
322ae0def54c28d612912b5058f9fa520353843b